--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -5,7 +5,7 @@
         {{#if isHome}}
           <li class="active"><a href="/">Home</a></li>
         {{else}}
-          <li class="active"><a href="/">Home</a></li>
+          <li><a href="/">Home</a></li>
         {{/if}}
 
         {{#if isCourses}}
@@ -14,7 +14,7 @@
           <li><a href="/courses">Courses</a></li>
         {{/if}}
 
-        {{#if isAddd}}
+        {{#if isAdd}}
           <li class="active"><a href="/add">Add Courses</a></li>
         {{else}}
           <li><a href="/add">Add Courses</a></li>
