--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,22 @@
 .nav-wrapper {
     padding: 0 20px;
 }
+
+.price {
+    font-size: 2rem;
+}
+
+.course {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.course .title {
+    font-size: 2rem;
+}
+
+.course img {
+    max-width: 600px;
+    height: auto;
+}
