--- a/views/add.hbs
+++ b/views/add.hbs
@@ -4,7 +4,7 @@
      <div class="input-field">
         <input id="{{title}}" name="title" type="text" class="validate" required >
         <label for="{{title}}">Curse name</label>
-        <span class="helper-text" data-error="Write curses name"></span>
+        <span class="helper-text" data-error="Write courses name"></span>
     </div>
 
     <div class="input-field">
