--- a/public/style.css
+++ b/public/style.css
@@ -20,3 +20,10 @@
     max-width: 600px;
     height: auto;
 }
+
+.card-action.actions {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
