--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -11,8 +11,13 @@
                     <span class="card-title">{{title}}</span>
                     <p class="price">{{price}}</p>
                 </div>
-                <div class="card-action">
+                <div class="card-action actions">
                     <a href="/courses/{{id}}" target="_blank">Open course</a>
+                    <a href="/courses/{{id}}/edit?allow=true">Edit course</a>
+                    <form action="" method="POST">
+                        <input type="hidden" data-id={{id}} />
+                        <button class="btn btm-small">buy</button>
+                    </form>
                 </div>
             </div>
         </div>
