--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -14,8 +14,8 @@
                 <div class="card-action actions">
                     <a href="/courses/{{id}}" target="_blank">Open course</a>
                     <a href="/courses/{{id}}/edit?allow=true">Edit course</a>
-                    <form action="" method="POST">
-                        <input type="hidden" data-id={{id}} />
+                    <form action="/basket" method="POST">
+                        <input type="hidden" name="id" data-id={{id}} value="{{id}}" />
                         <button class="btn btm-small">buy</button>
                     </form>
                 </div>
