--- a/views/add.hbs
+++ b/views/add.hbs
@@ -14,7 +14,7 @@
     </div>
 
     <div class="input-field">
-        <input id="{{img}}" name="imgURL" type="text" class="validate" required >
+        <input id="{{img}}" name="img" type="text" class="validate" required >
         <label for="{{img}}">Image URL</label>
         <span class="helper-text" data-error="Write image URL"></span>
     </div>
