--- a/views/courses.hbs
+++ b/views/courses.hbs
@@ -5,17 +5,17 @@
         <div class="col s6 offset-s3">
             <div class="card">
                 <div class="card-image">
-                    <img src={{imgURL}} alt={{title}}>
+                    <img src="{{img}}" alt="{{title}}">
                 </div>
                 <div class="card-content">
                     <span class="card-title">{{title}}</span>
                     <p class="price">{{price}}</p>
                 </div>
                 <div class="card-action actions">
-                    <a href="/courses/{{id}}" target="_blank">Open course</a>
-                    <a href="/courses/{{id}}/edit?allow=true">Edit course</a>
+                    <a href="/courses/{{_id}}" target="_blank">Open course</a>
+                    <a href="/courses/{{_id}}/edit?allow=true">Edit course</a>
                     <form action="/basket" method="POST">
-                        <input type="hidden" name="id" data-id={{id}} value="{{id}}" />
+                        <input type="hidden" name="id" data-id={{_id}} value="{{_id}}" />
                         <button class="btn btm-small">buy</button>
                     </form>
                 </div>
