--- a/views/course.hbs
+++ b/views/course.hbs
@@ -1,6 +1,6 @@
 <div class="course">
     <h1 class="title">{{course.title}}</h1>
 
-    <img src={{course.imgURL}} alt={{course.title}}>
+    <img src={{course.img}} alt={{course.title}}>
     <p class="price">{{course.price}}</p>
 </div>
