--- a/views/add.hbs
+++ b/views/add.hbs
@@ -19,5 +19,6 @@
         <span class="helper-text" data-error="Write image URL"></span>
     </div>
 
-    <button class="btn btn-primary">Save</button>
+    <input type="hidden" name="_csrf" value="{{csrf}}">
+    <button class="btn btn-primary" type="submit">Save</button>
 </form>
