--- a/views/basket.hbs
+++ b/views/basket.hbs
@@ -1,37 +1,39 @@
 <h1>Basket</h1>
 <div id="basket">
     {{#if courses.length}}
-<div>
-    <table>
-        <thead>
-            <tr>
-                <th>Course name</th>
-                <th>Count</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            {{#each courses}}
-            <tr>
-                <th>{{title}}</th>
-                <th>{{count}}</th>
-                <th>
-                    <button class="btn btm-small js-remove" data-id="{{id}}">Remove</button>
-                </th>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
     <div>
-        <strong>Price: </strong>
-        <span class="price">{{price}}</span>
+        <table>
+            <thead>
+                <tr>
+                    <th>Course name</th>
+                    <th>Count</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                {{#each courses}}
+                <tr>
+                    <th>{{title}}</th>
+                    <th>{{count}}</th>
+                    <th>
+                        <button class="btn btm-small js-remove" data-id="{{id}}" data-csrf="{{@root.csrf}}">Remove</button>
+                    </th>
+                </tr>
+                {{/each}}
+            </tbody>
+        </table>
+        <div>
+            <strong>Price: </strong>
+            <span class="price">{{price}}</span>
+        </div>
     </div>
-</div>
 
-<form action="/orders" method="POST">
-    <button class="btn btn-primary">Add Orders</button>
-</form>
-{{else}}
-<strong>Your basket is empty</strong>
-{{/if}}
+    <form action="/orders" method="POST">
+        <input type="hidden" name="_csrf" value="{{csrf}}">
+
+        <button class="btn btn-primary">Add Orders</button>
+    </form>
+    {{else}}
+    <strong>Your basket is empty</strong>
+    {{/if}}
 </div>
