--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,36 +1,46 @@
- <nav>
-    <div class="nav-wrapper">
-      <a href="/" class="brand-logo">Home</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        {{#if isHome}}
-          <li class="active"><a href="/">Home</a></li>
-        {{else}}
-          <li><a href="/">Home</a></li>
-        {{/if}}
+<nav>
+  <div class="nav-wrapper">
+    <a href="/" class="brand-logo">Home</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      {{#if isHome}}
+      <li class="active"><a href="/">Home</a></li>
+      {{else}}
+      <li><a href="/">Home</a></li>
+      {{/if}}
 
-        {{#if isCourses}}
-          <li class="active"><a href="/courses">Courses</a></li>
-        {{else}}
-          <li><a href="/courses">Courses</a></li>
-        {{/if}}
+      {{#if isCourses}}
+      <li class="active"><a href="/courses">Courses</a></li>
+      {{else}}
+      <li><a href="/courses">Courses</a></li>
+      {{/if}}
 
-        {{#if isAdd}}
-          <li class="active"><a href="/add">Add Courses</a></li>
-        {{else}}
-          <li><a href="/add">Add Courses</a></li>
-        {{/if}}
+      {{#if isAuth}}
+          {{#if isAdd}}
+              <li class="active"><a href="/add">Add Courses</a></li>
+          {{else}}
+            <li><a href="/add">Add Courses</a></li>
+          {{/if}}
 
-        {{#if isCard}}
-          <li class="active"><a href="/basket">Basket</a></li>
-        {{else}}
-          <li><a href="/basket">Basket</a></li>
-        {{/if}}
+          {{#if isCard}}
+            <li class="active"><a href="/basket">Basket</a></li>
+          {{else}}
+            <li><a href="/basket">Basket</a></li>
+          {{/if}}
 
-         {{#if isOrders}}
-          <li class="active"><a href="/orders">Orders</a></li>
-        {{else}}
-          <li><a href="/orders">Orders</a></li>
-        {{/if}}
-      </ul>
-    </div>
-  </nav>
+          {{#if isOrders}}
+              <li class="active"><a href="/orders">Orders</a></li>
+          {{else}}
+            <li><a href="/orders">Orders</a></li>
+          {{/if}}
+
+          <li><a href="/auth/logout">Logout</a></li>
+      {{else}}
+          {{#if isLogin}}
+              <li class="active"><a href="/auth/login#login">Sign in</a></li>
+          {{else}}
+              <li><a href="/auth/login#login">Sign in</a></li>
+          {{/if}}
+      {{/if}}
+    </ul>
+  </div>
+</nav>
