--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -27,6 +27,8 @@
           <span class="helper-text" data-error="Write password"></span>
         </div>
 
+        <p><a href="/auth/reset">Forgot password?</a></p>
+
         <input type="hidden" name="_csrf" value="{{csrf}}">
 
         <button class="btn btn-primary" type="submit">Sign in</button>
