--- a/views/add.hbs
+++ b/views/add.hbs
@@ -1,20 +1,24 @@
 <h1>Add courses</h1>
 
-<form action="/add" method="POST">
-     <div class="input-field">
-        <input id="{{title}}" name="title" type="text" class="validate" required >
+{{#if error}}
+    <p class="alert">{{error}}</p>
+{{/if}}
+
+<form action="/add" method="POST" novalidate>
+    <div class="input-field">
+        <input id="{{title}}" name="title" type="text" class="validate" value="{{data.title}}" required>
         <label for="{{title}}">Curse name</label>
         <span class="helper-text" data-error="Write courses name"></span>
     </div>
 
     <div class="input-field">
-        <input id="{{price}}" name="price" type="number" min="1"  class="validate" required >
+        <input id="{{price}}" name="price" type="number" min="1" class="validate" value="{{data.price}}" required>
         <label for="{{price}}">Price</label>
         <span class="helper-text" data-error="Write price"></span>
     </div>
 
     <div class="input-field">
-        <input id="{{img}}" name="img" type="text" class="validate" required >
+        <input id="{{img}}" name="img" type="text" class="validate" value="{{data.img}}" required>
         <label for="{{img}}">Image URL</label>
         <span class="helper-text" data-error="Write image URL"></span>
     </div>
