--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -35,9 +35,9 @@
       </form>
     </div>
     <div id="register" class="col s6 offset-s3">
-      <form action="/auth/register" method="POST">
-        {{#if registerErroe}}
-        <p class="alert">{{registerErroe}}</p>
+      <form action="/auth/register" method="POST" novalidate>
+        {{#if registerError}}
+        <p class="alert">{{registerError}}</p>
         {{/if}}
 
         <h1>Create Account</h1>
